--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -13,6 +14,30 @@
 		<title>Bootstrap Challenge</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light border rounded mx-5 my-2">
+
+			<div class="navbar-brand">Navbar</div>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse d flex justify-content-end" id="navbarSupportedContent">
+				<ul class="nav navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.pubg.com/">Link 1</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.battlefield.com/games/battlefield-4">Link 2</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.battlefield.com/games/battlefield-1">Link 3</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.battlefield.com/games/battlefield-5">Link 4</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 		<div class="jumbotron">
 			<h1 class="display-4">Hello, world!</h1>
 			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
