Added main article with thumbnail.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
 			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 		</div>
+		<main class="row container-fluid bg-dark text-white p-5 m-0">
+			<div class="col-sm-4 text-center">
+				<img src="http://placebacon.net/400/300" alt="Bacon" class="img-fluid">
+			</div>
 
+			<div class="col-sm-8 align-self-center p-2">
+				<p>Bacon ipsum dolor amet meatball corned beef brisket jerky, alcatra jowl kielbasa ball tip turkey pastrami andouille ground round prosciutto pork belly ribeye. Burgdoggen short loin shoulder turducken landjaeger.
+					Burgdoggen bacon sausage ball tip short ribs drumstick, flank frankfurter corned beef landjaeger turkey swine salami kielbasa buffalo. Meatloaf tongue boudin tenderloin alcatra rump shank kielbasa. Doner pancetta salami pig andouille.
+					Jowl venison swine pork loin ribeye leberkas, jerky porchetta tail spare ribs meatloaf bacon andouille.</p> <br/>
+				<p>Spare ribs pancetta capicola, ham hock brisket buffalo sausage. Doner picanha turkey tongue tenderloin. Bacon ham burgdoggen short ribs pork chop brisket pork belly. Leberkas turkey jerky ham hock picanha brisket andouille.
+					Cupim pancetta short ribs buffalo pork chop drumstick fatback kielbasa biltong jerky prosciutto short loin strip steak rump hamburger. Turkey leberkas sausage hamburger salami boudin.
+					Prosciutto cow meatloaf pancetta alcatra, tri-tip sausage corned beef jerky bresaola.</p>
+			</div>
+		</main>
 
 
 
