Added rounded images with text.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,38 @@
 					Prosciutto cow meatloaf pancetta alcatra, tri-tip sausage corned beef jerky bresaola.</p>
 			</div>
 		</main>
+		<article class="row m-1 p-5">
+
+			<div class="col-sm-3" id="bacon1">
+				<img src="http://placebacon.net/400/300?image=3" class="img-fluid rounded-circle mx-auto d-block" alt="bacon 1"/>
+				<div class="card bg-success border border-dark rounded my-5 p-1">
+					<p>Bacon ipsum dolor amet cupim ribeye ball tip, alcatra capicola salami flank boudin turkey sirloin chicken shank rump strip steak biltong. Bresaola kielbasa beef ribs andouille ground round short loin. Bresaola jerky cupim, flank chicken drumstick pork cow. Turducken beef tri-tip shoulder ribeye. Chicken bresaola filet mignon, frankfurter ribeye pork chop andouille meatball spare ribs salami fatback tenderloin hamburger. Pork ball tip cupim shoulder pig ham hock cow chicken. Cupim jerky tenderloin swine ball tip andouille doner.</p>
+				</div>
+			</div>
+
+			<div class="col-sm-3" id="bacon2">
+				<img src="http://placebacon.net/400/300?image=4" class="img-fluid rounded-circle mx-auto d-block" alt="bacon 2"/>
+				<div class="card bg-danger border border-dark rounded my-5 p-1">
+					<p>Burgdoggen jowl sirloin boudin beef ball tip meatball tri-tip ham hock cow pastrami brisket. Chuck prosciutto strip steak pig capicola pork pastrami brisket ground round biltong. Brisket ham pork loin turkey. Ham hock landjaeger sirloin, chuck burgdoggen pancetta pig pastrami prosciutto.</p>
+				</div>
+			</div>
+
+			<div class="col-sm-3" id="bacon3">
+				<img src="http://placebacon.net/400/300?image=5" class="img-fluid rounded-circle mx-auto d-block" alt="bacon3"/>
+				<div class="card bg-primary border border-dark rounded my-5 p-1">
+					<p>Leberkas hamburger shankle, picanha porchetta tail frankfurter pork chop meatball strip steak. Ham andouille ribeye swine, strip steak kevin pig pork loin fatback pastrami ground round porchetta corned beef. Bresaola andouille frankfurter, short loin cow flank capicola pork belly pork hamburger brisket shankle. Jowl pastrami jerky frankfurter picanha. Ground round porchetta andouille, t-bone landjaeger short loin swine. Bresaola kielbasa flank, doner swine leberkas biltong shoulder pig turkey.</p>
+				</div>
+			</div>
+
+			<div class="col-sm-3" id="bacon4">
+				<img src="http://placebacon.net/400/300?image=6" class="img-fluid rounded-circle mx-auto d-block" alt="bacon4"/>
+				<div class="card bg-warning border border-dark rounded my-5 p-1">
+					<p>Landjaeger bresaola shank swine venison. Leberkas burgdoggen pork loin pancetta picanha fatback turkey. Bacon filet mignon pork, picanha short loin beef brisket. Venison prosciutto landjaeger shoulder shankle pork belly sirloin, brisket drumstick meatball pork doner jerky. Chuck porchetta turducken, ham hock cow pastrami tail andouille short loin bresaola bacon.</p>
+				</div>
+			</div>
+
+		</article>
+
 
 
 
