--- a/index.html
+++ b/index.html
@@ -88,15 +88,6 @@
 			</div>
 
 		</article>
-
-
-
-
-
-
-
-
-
-
+		<footer class="container-fluid text-center bg-dark text-white p-5">Mmmm Bacon!</footer>
 	</body>
 </html>
