Added Title to navbar.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light border rounded mx-5 my-2">
 
-			<div class="navbar-brand">Navbar</div>
+			<div class="navbar-brand">Title</div>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
