Added ml-auto to nav bar div class.  Added second paragraph to jumbotron.  Added section to jumbotron.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 		<title>Bootstrap Challenge</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-sm navbar-light bg-light border rounded mx-5 my-2">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light border rounded mx-5 my-2">
 
 			<div class="navbar-brand">Title</div>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse d flex justify-content-end" id="navbarSupportedContent">
-				<ul class="nav navbar-nav">
+			<div class="collapse navbar-collapse flex justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.pubg.com/">Link 1</a>
 					</li>
@@ -38,16 +38,21 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="jumbotron">
+	<section class="py-5">
+		<div class="container">
+			<div class="jumbotron">
 			<h1 class="display-4">Hello, world!</h1>
 			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+			<hr class="my-4">
+			<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 		</div>
+	</div>
+	</section>
 		<main class="row container-fluid bg-dark text-white p-5 m-0">
 			<div class="col-sm-4 text-center">
 				<img src="http://placebacon.net/400/300" alt="Bacon" class="img-fluid">
 			</div>
-
 			<div class="col-sm-8 align-self-center p-2">
 				<p>Bacon ipsum dolor amet meatball corned beef brisket jerky, alcatra jowl kielbasa ball tip turkey pastrami andouille ground round prosciutto pork belly ribeye. Burgdoggen short loin shoulder turducken landjaeger.
 					Burgdoggen bacon sausage ball tip short ribs drumstick, flank frankfurter corned beef landjaeger turkey swine salami kielbasa buffalo. Meatloaf tongue boudin tenderloin alcatra rump shank kielbasa. Doner pancetta salami pig andouille.
